fix: fixed alignment of slider buttons

--- a/scss/_fixes.scss
+++ b/scss/_fixes.scss
@@ -565,7 +565,9 @@ a.custom-logo-link {
 @media only screen and (max-width: 479px) {
     #main-slider .cycle-prev,
     #main-slider .cycle-next {
-        font-size: 16px;
+        i {
+            font-size: 16px;
+        }
     }
 
     #university-hub-services.home-section-services .services-item,
